fix: endTitle too large on small screens, shrank slightly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@
 }
 
 .endTitle {
-  font-size: 6vw;
+  font-size: 5.5vw;
   margin: 0 auto;
   display: flex;
   justify-content: center;
